--- a/public/sections/question-1/style.css
+++ b/public/sections/question-1/style.css
@@ -1,12 +1,3 @@
-@keyframes scroll-left {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
-}
-
 .header {
   display: flex;
   width: 1fr;
@@ -59,87 +50,90 @@
   align-content: center;
 }
 
-.section-1 {
-  display: flex;
-  width: 1fr;
-  flex-direction: column;
-  align-items: center;
-  gap: 125px;
-}
-
-.h1-subtitle-button {
-  display: flex;
-  width: 993px;
-  flex-direction: column;
-  align-items: center;
-  gap: 57px;
-}
-
-.h1-subtitle {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.title {
+.box-content {
+  width: 1080px;
+  height: 560px;
+  border-radius: 24px;
+  background: #f7f8f8;
+  box-shadow: 0 -1px 50px -20px rgba(0, 0, 0, 0.25),
+    0 15px 50px -20px rgba(0, 0, 0, 0.25);
   align-self: center;
+}
+
+.box-selection {
+  display: inline-flex;
+  justify-content: center;
+  /* align-items: flex-start; */
+  align-self: center;
+  gap: 84px;
+}
+
+.box-title {
+  width: 864px;
+  align-self: center;
+  justify-self: center;
   color: var(--Foundation-grey-blue-purple-700, #31333d);
   text-align: center;
   font-family: Aptos;
-  font-size: 108px;
+  font-size: 36px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 100px;
-  margin-bottom: 52px;
-}
-
-i {
-  color: var(--Foundation-grey-blue-purple-700, #31333d);
-  font-family: "source-serif-pro", serif;
-  font-size: 108px;
-  font-style: italic;
   font-weight: 700;
-  line-height: 100px;
+  line-height: normal;
 }
 
-.subtitle {
-  margin-top: 52px;
-  color: var(--Foundation-grey-blue-purple-500, #454856);
-  text-align: center;
-  font-family: Aptos;
+.step {
+  color: #000;
+  font-family: bagel-fat-one, sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
 
-.btn-cta {
-  display: flex;
+.btn-next {
+  display: inline-flex;
   padding: 13px 32px;
   justify-content: center;
   align-items: center;
   gap: 8px;
   border-radius: 16px;
   background: var(--Foundation-yellow-yellow-500, #f8ce61);
-}
-
-.infinite-band-wrapper {
-  overflow: hidden;
-  width: 1fr;
-  white-space: nowrap;
-}
-
-.infinite-band {
-  display: inline-flex;
-  align-items: center;
-  gap: 80px;
-  align-self: center;
-  color: var(--Foundation-grey-blue-purple-900, #1d1e24);
-  font-family: bagel-fat-one, sans-serif;
+  color: #09282a;
+  text-align: center;
+  font-family: Aptos;
+  font-size: 24px;
   font-style: normal;
-  font-weight: 400;
-  font-size: 40px;
-  animation: scroll-left 25s linear infinite;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.avatar-card {
+  display: flex;
+  width: 232px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+}
+
+.avatar-img {
+  display: flex;
+  height: 234px;
+  width: 174px;
+  padding: 0 29px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.avatar-1 {
+  background-image: url("../../assets/avatar/avatar-1.png");
+}
+.avatar-2 {
+  background-image: url("../../assets/avatar/avatar-2.png");
+}
+.avatar-3 {
+  background-image: url("../../assets/avatar/avatar-3.png");
 }
 
 footer {
@@ -164,7 +158,7 @@ footer {
   flex-shrink: 0;
   align-self: stretch;
   font-family: Aptos;
-  font-size: 16px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -179,17 +173,17 @@ footer {
 .twitter {
   width: 24px;
   height: 24px;
-  background-image: url("../assets/icon-24px/prime_twitter.png");
+  background-image: url("../../assets/icon-24px/prime_twitter.png");
 }
 .instagram {
   width: 24px;
   height: 24px;
-  background-image: url("../assets/icon-24px/instagram.png");
+  background-image: url("../../assets/icon-24px/instagram.png");
 }
 .facebook {
   width: 24px;
   height: 24px;
-  background-image: url("../assets/icon-24px/facebook.png");
+  background-image: url("../../assets/icon-24px/facebook.png");
 }
 
 .footer-list {
