--- a/public/new-account/style.css
+++ b/public/new-account/style.css
@@ -1,3 +1,10 @@
+* {
+  font-family: Aptos;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
 .header {
   display: flex;
   width: 1fr;
@@ -75,7 +82,6 @@
 .headline {
   width: 100%;
   display: flex;
-  /* padding: 8px; */
   justify-content: flex-start;
   align-items: flex-start;
   gap: 8px;
@@ -152,7 +158,6 @@
   font-weight: 700;
   line-height: normal;
   cursor: not-allowed;
-  /* pointer-events: none; */
 }
 
 .btn-create.active {
@@ -231,4 +236,95 @@ footer {
 
 .copyrights {
   text-align: right;
+}
+
+.popup-login {
+  position: relative;
+  display: flex;
+  width: 601px;
+  height: 576px;
+  padding: 80px 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  border-radius: 24px;
+  background: #f5f6f7;
+}
+.btn-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../assets/icon-24px/icon-cross.png");
+}
+
+.logo-popup {
+  display: flex;
+  width: 400px;
+  height: 116px;
+  padding: 0 72px;
+  justify-content: center;
+  align-items: center;
+  color: var(--Foundation-green-green-500, #1c8582);
+  text-align: center;
+  font-family: bagel-fat-one, sans-serif;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.group-field {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 48px;
+}
+
+.label-field-username {
+  position: absolute;
+  left: 16px;
+  top: -16px;
+  color: var(--Foundation-grey-blue-purple-400, #6a6d78);
+}
+
+.label-field-password {
+  position: absolute;
+  left: 16px;
+  top: 90px;
+  color: var(--Foundation-grey-blue-purple-400, #6a6d78);
+}
+
+.field {
+  width: 400px;
+  height: 56px;
+  border-radius: 16px;
+  border: 1px solid #808080;
+  padding: 0 16px;
+  font-size: 20px;
+  font-family: Aptos;
+}
+
+.btn-connect {
+  display: flex;
+  width: 400px;
+  padding: 13px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 16px;
+  background: var(--Foundation-yellow-yellow-600, #e2bb58);
+  color: #fff;
+  font-family: Aptos;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
