--- a/public/new-account/style.css
+++ b/public/new-account/style.css
@@ -232,10 +232,25 @@ footer {
   justify-content: center;
   align-items: center;
   gap: 8px;
+  font-size: 16px;
 }
 
 .copyrights {
   text-align: right;
+  font-size: 16px;
+}
+
+.popup-overlay-bg {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 20;
+  justify-content: center;
+  align-items: center;
 }
 
 .popup-login {
@@ -251,6 +266,7 @@ footer {
   border-radius: 24px;
   background: #f5f6f7;
 }
+
 .btn-close {
   position: absolute;
   top: 24px;
