--- a/public/new-account/style.css
+++ b/public/new-account/style.css
@@ -72,6 +72,7 @@
 }
 
 .right-content {
+  position: relative;
   display: flex;
   width: 736px;
   flex-direction: column;
@@ -80,17 +81,20 @@
 }
 
 .headline {
+  position: absolute;
   width: 100%;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   gap: 8px;
-  color: var(--Foundation-grey-blue-purple-700, #31333d);
-  font-family: Aptos;
-  font-size: 24px;
+  color: var(--Foundation-green-green-500, #1c8582);
+  font-family: bagel-fat-one, sans-serif;
+  font-size: 80px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 400;
   line-height: normal;
+  margin: 0;
+  top: -152px;
 }
 
 .group-title-field {
