--- a/public/landing/style.css
+++ b/public/landing/style.css
@@ -212,3 +212,119 @@ footer {
 .copyrights {
   text-align: right;
 }
+
+/* Popup */
+.popup-overlay-bg {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 20;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-login {
+  position: relative;
+  display: flex;
+  width: 601px;
+  height: 576px;
+  padding: 80px 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  border-radius: 24px;
+  background: #f5f6f7;
+}
+
+.btn-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../assets/icon-24px/icon-cross.png");
+}
+
+.logo-popup {
+  display: flex;
+  width: 400px;
+  height: 116px;
+  padding: 0 72px;
+  justify-content: center;
+  align-items: center;
+  color: var(--Foundation-green-green-500, #1c8582);
+  text-align: center;
+  font-family: bagel-fat-one, sans-serif;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.group-field {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 48px;
+}
+
+.label-field-username {
+  position: absolute;
+  left: 16px;
+  top: -16px;
+  color: var(--Foundation-grey-blue-purple-400, #6a6d78);
+  font-family: Aptos;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.label-field-password {
+  position: absolute;
+  left: 16px;
+  top: 90px;
+  color: var(--Foundation-grey-blue-purple-400, #6a6d78);
+  font-family: Aptos;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.field {
+  width: 400px;
+  height: 56px;
+  border-radius: 16px;
+  border: 1px solid #808080;
+  padding: 0 16px;
+  font-size: 20px;
+  font-family: Aptos;
+}
+
+.btn-connect {
+  display: flex;
+  width: 400px;
+  padding: 13px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 16px;
+  background: var(--Foundation-yellow-yellow-600, #e2bb58);
+  color: #fff;
+  font-family: Aptos;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
