--- a/public/new-account/style.css
+++ b/public/new-account/style.css
@@ -5,6 +5,7 @@
   font-weight: 500;
   line-height: normal;
 }
+
 .header {
   display: flex;
   width: 1fr;
@@ -243,7 +244,7 @@ footer {
   text-align: right;
   font-size: 16px;
 }
-
+/* Popup */
 .popup-overlay-bg {
   display: none;
   position: fixed;
