--- a/public/logged/style.css
+++ b/public/logged/style.css
@@ -50,6 +50,7 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
+  width: 100%;
 }
 
 .page-content {
@@ -58,7 +59,7 @@
   flex-direction: column;
   align-items: center;
   gap: 64px;
-  margin: 0 180px;
+  margin: 56px 180px;
 }
 
 .top-section {
@@ -137,7 +138,19 @@
   position: relative;
   width: 296px;
   height: 400px;
-  background: url("../assets/empty-choice.png");
+  box-shadow: 0 15px 19px -3.75px rgba(0, 0, 0, 0.1),
+    0 6px 7.5px -5px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+}
+
+#movie-saved-2 {
+  background: url("../assets/empty-choice-2.png");
+  background-size: cover;
+}
+
+#movie-saved-3 {
+  background: url("../assets/empty-choice-3.png");
+  background-size: cover;
 }
 
 .movie-card-saved:active {
