--- a/public/sections/question-1/style.css
+++ b/public/sections/question-1/style.css
@@ -86,6 +86,12 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  transition: all 0.3s ease;
+}
+
+.btn-next:hover {
+  background-color: #887135;
+  color: #fefaef;
 }
 
 /* Section 1 */
@@ -125,7 +131,6 @@
 
 .box-header {
   display: flex;
-  /* justify-content: space-between; */
   align-items: center;
   width: 100%;
   max-width: 864px;
@@ -154,6 +159,11 @@
   justify-content: center;
   align-items: center;
   gap: 32px;
+  transition: 0.45s;
+}
+
+.avatar-card:hover {
+  transform: scale(1.07);
 }
 
 .avatar-img {
@@ -650,4 +660,28 @@ footer {
 .box-content-4,
 .box-content-5 {
   display: none;
+}
+
+/* Gestion des cards */
+.avatar-card.selected {
+  outline: 4px solid #f8ce61;
+  border-radius: 24px;
+}
+
+.btn-next.disabled {
+  background: #ecedee;
+  color: #82848e;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+/* Gestion des pills */
+.pill.is-selected {
+  opacity: 1;
+}
+
+.pill-container:has(.is-selected) .pill:not(.is-selected) {
+  background: #82848e;
+  color: #fff;
+  opacity: 0.6;
 }
