--- a/public/landing/style.css
+++ b/public/landing/style.css
@@ -112,7 +112,10 @@ i {
   font-weight: 400;
   line-height: normal;
 }
-
+a {
+  text-decoration: none;
+  color: black;
+}
 .btn-cta {
   display: flex;
   padding: 13px 32px;
